--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
     ".next/types/**/*.ts",
     "app/lib/placeholder-data.ts",
     "scripts/seed.js"
-  ],
+, "app/dashboard/invoices/create/page.tsx"  ,
+  "types/next-auth.d.ts"],
   "exclude": ["node_modules"]
 }
