--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
     "scripts/seed.js"
 , "app/dashboard/invoices/create/page.tsx"  ,
 "app","lib",
+"types/**/*.d.ts" ,
   "types/next-auth.d.ts"],
   "exclude": ["node_modules"]
 }
